--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     implementation 'com.google.apis:google-api-services-gmail:v1-rev83-1.23.0'
+    implementation "com.googlecode.json-simple:json-simple:1.1.1"
     implementation 'org.jsoup:jsoup:1.13.1'
 }
