--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'java'
     id 'application'
 }
@@ -6,9 +7,10 @@ plugins {
 group 'dev.copystrike'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.14
-targetCompatibility = 1.14
+sourceCompatibility = 14.0
+targetCompatibility = 14.0
 version = '1.0-SNAPSHJOT'
+mainClassName = "dev.copystrike.smtr.EnvironmentSl2To"
 
 repositories {
     mavenCentral()
@@ -17,6 +19,12 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+shadowJar {
+    exclude("email.json")
+    // To make sure you never know with java
+    exclude("StoredCredential")
 }
 
 dependencies {
